# graph_bind_uwu

./: .gitignore  README.md  graph_preprocessing.ipynb  pdb_preprocessing.ipynb  preprocess.py  preprocess_data.ipynb  pyproject.toml  training.ipynb  training_split.csv
data_preprocessing/: preprocessing_v.ipynb
data_preprocessing/data/: multi_uniprot_pdbs.csv  pdb_processing_info.csv  pdb_splits.csv  pdb_uniprot_class.csv  pdb_uniprot_ids.csv  pdb_unknown_class.csv  uniprot_pdb_mapping.csv
src/constants/: formal_charge.py  isoelectric.py  kyte_doolittle.py  side_chain.py
src/loggers/: metrics.py
src/models/: __init__.py  building_blocks.py  loaders.py  loss.py  metrics.py  models.py  training.py  utils.py
src/preprocessing/: GraphBuilder.py  __init__.py  preprocess.py  retrieve.py
src/visualize/: __init__.py  graph_utils.py
tests/: Notes.py  esm.ipynb  gnn_design.ipynb  preprocessing.ipynb
